# django-shop

mysite/: .env.template  Dockerfile  devices.csv  docker-compose.yaml  orders.csv  products-export.csv  pyproject.toml  requirements.txt  shopapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_remove_article_author_remove_article_category_and_more.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  article_old_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templatetags/: profile_extras.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  api.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: auth-fixtures.json  order-fixture.json  products-fixture.json  user-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_products_order_user.py  0004_alter_product_price.py  0005_alter_product_description.py  0006_product_created_by.py  0007_order_receipt.py  0008_product_preview.py  0009_productimage.py  0010_alter_order_options_alter_product_options_and_more.py
(+32 files in other folders)
