[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "Артём Гореликов",email = "89997929804@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.6)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (==3.14.0)",
    "django-filter (==25.1)",
    "django-debug-toolbar (==6.0.0)",
    "pillow (==11.3.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "asgiref (==3.9.1)",
    "attrs (==25.4.0)",
    "docutils (==0.22.2)",
    "drf-spectacular (==0.28.0)",
    "flake8 (==7.3.0)",
    "flake8-docstrings (==1.7.0)",
    "inflection (==0.5.1)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "mccabe (==0.7.0)",
    "pycodestyle (==2.14.0)",
    "pydocstyle (==6.3.0)",
    "pyflakes (==3.4.0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "referencing (==0.36.2)",
    "rpds-py (==0.27.1)",
    "snowballstemmer (==3.0.1)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.15.0)",
    "uritemplate (==4.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
